@@ -53,9 +53,56 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<jvmArguments>
+						-Xmx256m
+						<!-- MaxPermSize: For Java 7 or older, MaxMetaspaceSize: For 8 or later -->
+						<!-- -XX:MaxPermSize=32m -->
+						-XX:MaxMetaspaceSize=32m
+						-XX:MaxDirectMemorySize=90m
+						-XX:+UseSerialGC
+						-Xloggc:logs/gc.log
+						<!-- MaxPermSize: For Java 8 or later, add pid and timestamp prefix -->
+						<!-- -Xloggc:logs/gc_%p_%t.log -->
+						-XX:+PrintHeapAtGC
+						-XX:+PrintGCDetails
+						-XX:+PrintGCDateStamps
+						-XX:+UseGCLogFileRotation
+						-XX:NumberOfGCLogFiles=5
+						-XX:GCLogFileSize=10M
+						-XX:GCTimeLimit=15
+						-XX:GCHeapFreeLimit=50
+						-XX:+HeapDumpOnOutOfMemoryError
+						-XX:HeapDumpPath=logs/
+						-XX:ErrorFile=logs/hs_err_pid%p.log
+						-XX:NativeMemoryTracking=summary
+						<!-- Auto kill JVM when OOME occurs: For post-8u92 JDKs -->
+						<!-- -XX:+CrashOnOutOfMemoryError -->
+						<!-- Auto kill JVM when OOME occurs: For Linux -->
+						<!-- -XX:OnOutOfMemoryError="kill -9 %p" -->
+						<!-- Auto kill JVM when OOME occurs: For Windows -->
+						<!-- -XX:OnOutOfMemoryError=taskkill /F /PID %p -->
+						<!-- UnlockCommercialFeatures/FlightRecorder: For Oracle Java commercial use -->
+						<!-- -XX:+UnlockCommercialFeatures -XX:+FlightRecorder -->
+						<!-- -agentpath:/root/eclipse/plugins/org.zeroturnaround.eclipse.embedder_7.0.8.RELEASE/jrebel/lib/libjrebel64.so -->
+						-agentlib:jdwp=transport=dt_socket,server=y,address=9009,suspend=n
+						-Dderby.stream.error.file=logs/derby.log
+						-Dderby.infolog.append=true
+						-Dderby.language.logStatementText=true
+						-Dderby.locks.deadlockTrace=true
+						-Dderby.locks.monitor=true
+						-Dderby.storage.rowLocking=true
+						-Dcom.sun.management.jmxremote
+						-Dcom.sun.management.jmxremote.port=7900
+						-Dcom.sun.management.jmxremote.ssl=false
+						-Dcom.sun.management.jmxremote.authenticate=false
+						<!-- -Djava.security.manager -->
+						<!-- -Djava.security.policy=catalina.policy -->
+						-ea
+					</jvmArguments>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 
 </project>
